added qrscanner page in student views

--- a/src/templates/core/sidebar.html
+++ b/src/templates/core/sidebar.html
@@ -37,6 +37,11 @@
                     </li>
                     {% else %}
                     <li class="nav-item">
+                        <a href="{{ url_for('core.student_scanner') }}" class="nav-link px-sm-0 px-2 ms-2">
+                            <i class="fa-solid fa-qrcode" style="color: #6c757d;"></i><span class="ms-1 d-none d-sm-inline" style="color: black; font-size: 15px;">QR Scanner</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a href="{{ url_for('core.show_qrcode') }}" class="nav-link px-sm-0 px-2 ms-2">
                             <i class="fa-regular fa-clock" style="color: #6c757d;"></i><span class="ms-1 d-none d-sm-inline" style="color: black; font-size: 15px;">QR Code</span>
                         </a>
