Export, Join Classlist, Manual Subject and Section

--- a/src/templates/core/faculty/classlist_details.html
+++ b/src/templates/core/faculty/classlist_details.html
@@ -10,6 +10,7 @@
         <h4>{{ classlist_entry.subject_name }} - {{ classlist_entry.section_code }}</h4>
         <p>School Year: {{ classlist_entry.school_year }}</p>
         <p>Semester: {{ classlist_entry.semester.value }}</p>
+        <p>Classlist Code: {{ classlist_entry.code }}</p>
     </div>
 </div>
 
