--- a/src/templates/core/sidebar.html
+++ b/src/templates/core/sidebar.html
@@ -46,6 +46,11 @@
                             <i class="fa-regular fa-clock" style="color: #6c757d;"></i><span class="ms-1 d-none d-sm-inline" style="color: black; font-size: 15px;">QR Code</span>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a href="{{ url_for('core.join_classlist') }}" class="nav-link px-sm-0 px-2 ms-2">
+                            <i class="fa-solid fa-plus" style="color: #6c757d;"></i><span class="ms-1 d-none d-sm-inline" style="color: black; font-size: 15px;">Join Classlist</span>
+                        </a>
+                    </li>
                     {% endif %}
                 </ul>
             </div>
