--- a/src/templates/accounts/login.html
+++ b/src/templates/accounts/login.html
@@ -139,7 +139,8 @@ font-size: 12px; /* Adjust the font size as needed */
             type="submit">LOGIN</button>
         </div>
         <hr class="my-2">
-        <p class="text-center mt-3" style="margin-top: 15px; font-size: 12px;">No existing account? <a href="{{ url_for('accounts.register') }}">Register now</a></p>
+        <p class="text-center mt-3" style="margin-top: 15px; font-size: 12px;">No existing account? <a href="{{ url_for('accounts.register') }}">Register now.</a></p>
+        <p class="text-center mt-3" style="margin-top: 15px; font-size: 12px;">Tell us what you think of our system by answering this <a href="https://forms.gle/NeQhNamP8MmJaizX7">survey form.</a></p>
       </form>
     </div>
   </div>
