--- a/src/templates/core/faculty/index.html
+++ b/src/templates/core/faculty/index.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 <div class="text-center">
-    <h1 class="h3 mb-4" style="margin-top: 15px;"><strong> Dashboard</strong></h1>
+    <h1 class="h3 mb-4" style="margin-top: 15px;"><strong> Admin Dashboard</strong></h1>
 </div>
 
 
@@ -69,6 +69,7 @@
     </table>
 </div>
 
+<script src="https://www.gstatic.com/charts/loader.js"></script>
 <script>
     google.charts.load('current', { 'packages': ['corechart'] });
     google.charts.setOnLoadCallback(drawChart);
