--- a/src/templates/core/faculty/qrgenerator.html
+++ b/src/templates/core/faculty/qrgenerator.html
@@ -3,7 +3,7 @@
 {% block body %}
 
 <div class="text-center">
-    <h1 class="h3 mb-4"><strong>QR Generator</strong></h1>
+    <h1 class="h3 mb-4"><strong>Add Attendance - Generate QR</strong></h1>
     <p>Generate QR code for your students to scan and record their attendance</p>
 </div>
 
