--- a/src/templates/core/faculty/qrscanner.html
+++ b/src/templates/core/faculty/qrscanner.html
@@ -3,11 +3,13 @@
 {% block body %}
 
 <div class="text-center">
-    <h1 class="h3 mb-4"><strong>QR Scanner</strong></h1>
+    <h1 class="h3 mb-4"><strong>Add Attendance - Scan QR</strong></h1>
+    <p>Scan your students' QR code to record their attendance</p>
 
     <div id="reader" style="display: inline-block; position: relative; padding: 0px; border: 1px solid silver; border-radius: 10px; width: 280px;"></div>
 
     <br><br>
+    <p>Do not forget to select a class list and select the correct attendance status: Present or Late.</p>
 
     <div class="d-flex justify-content-center">
         <div class="col-md-6 col-lg-3 mb-3">
