fixed late and absent logic for qrgen

--- a/src/templates/core/faculty/qrcode.html
+++ b/src/templates/core/faculty/qrcode.html
@@ -4,6 +4,7 @@
     <div class="qr-code-container">
         <h1 class="header-text">QR Code for {{ classlistname }}</h1>
         <p>Instruct students to scan this QR code to record their attendance.</p>
+        <p>This attendance link will expire in one (1) hour.</p>
         <hr>
         <div class="qr-code-image-container">
             <img src="data:image/png;base64, {{ qr_image }}" alt="QR Code" class="qr-code-img">
@@ -11,30 +12,32 @@
     </div>
 
     <style>
+        .box {
+            -ms-flex: 1 1 auto;
+            flex: 1 1 auto;
+            margin-top: 17px;
+            padding: 1.25rem;
+            border: 0.001px solid rgba(0, 0, 0, 0.16);
+            border-top: 5px solid maroon;
+            border-radius: 10px;
+            box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 2px;
+        }
 
-        .box{
-        -ms-flex: 1 1 auto;
-        flex: 1 1 auto;
-        margin-top: 17px;
-        padding: 1.25rem;
-        border: 0.001px solid rgba(0, 0, 0, 0.16);
-        border-top: 5px solid maroon;
-        border-radius: 10px;
-        box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 2px;
-    }
-        .box-qr-code{
-        -ms-flex: 1 1 auto;
-        flex: 1 1 auto;
-        margin-top: 17px;
-        padding: 1.25rem;
-        border: 0.001px solid rgba(0, 0, 0, 0.16);
-        border-top: 5px solid maroon;
-        border-radius: 10px;
-        box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 2px;
-    }
+        .box-qr-code {
+            -ms-flex: 1 1 auto;
+            flex: 1 1 auto;
+            margin-top: 17px;
+            padding: 1.25rem;
+            border: 0.001px solid rgba(0, 0, 0, 0.16);
+            border-top: 5px solid maroon;
+            border-radius: 10px;
+            box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 2px;
+        }
+
         .qr-code-container {
             text-align: center;
         }
+
         .header-text {
             font-size: 35px;
             font-weight: bold;
@@ -42,11 +45,13 @@
             margin-bottom: 10px;
             margin-top: 25px;
         }
+
         .qr-code-image-container {
             position: relative;
         }
+
         .qr-code-img {
-            max-width: 100%;
+            max-width: 50%; /* Set the max-width to 50% */
             height: auto;
         }
     </style>
